--- a/styles.css
+++ b/styles.css
@@ -41,18 +41,17 @@ nav {
 }
 
 .logo {
-  display: flex;
-  align-items: center;
-  font-size: 1.8rem;
-  font-weight: bold;
-  color: var(--background-color);
+    display: flex;
+    align-items: center;
 }
 
-.logo-svg {
-  width: 40px;
-  height: 40px;
-  margin-right: 10px;
+.logo-img {
+    width: 60px; /* Adjust size as needed */
+    height: auto;
+    border-radius: 10px; /* Slight rounded edges for a classy look */
+    margin-right: 10px;
 }
+
 
 nav ul {
   display: flex;
@@ -95,7 +94,7 @@ h2 {
   justify-content: space-between;
   align-items: center;
   min-height: calc(100vh - 4rem);
-  background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" preserveAspectRatio="none"><rect width="100" height="100" fill="%2322223B"/><path d="M0 0 L100 100 L0 100 Z" fill="%234ECDC4" opacity="0.3"/><path d="M100 0 L0 100 L100 100 Z" fill="%23FF6B6B" opacity="0.3"/></svg>');
+  background-image: url(/images/bb.jpg);
   background-size: cover;
   background-position: center;
   color: var(--background-color);
